[package]
name = "kqueue-sys"
version = "0.1.4"
authors = ["William Orr <will@worrbase.com>", "Daniel (dmilith) Dettlaff"]
description = "Low-level kqueue interface for BSDs"
license = "MIT"
keywords = ["kqueue", "kevent", "bsd", "no_std", "nostd"]
categories = ["external-ffi-bindings", "no-std", "os::unix-apis", "filesystem"]
repository = "https://gitlab.com/worr/rust-kqueue-sys"
readme = "README.md"

[dependencies]
bitflags = "^0.7.0"
libc = "^0.2.17"
