[package]
name = "kqueue2-sys"
version = "0.1.4"
authors = ["William Orr <will@worrbase.com>", "Daniel (dmilith) Dettlaff <dmilith@me.com>"]
description = "Low-level kqueue interface for BSDs and MacOS"
license = "MIT"
keywords = ["kqueue", "kevent", "bsd", "no_std", "nostd", "macos", "darwin"]
categories = ["external-ffi-bindings", "no-std", "os::unix-apis", "filesystem"]
repository = "https://github.com/VerKnowSys/rust-kqueue-sys"
readme = "README.md"

[dependencies]
bitflags = "0.7"
libc = "0.2"
